<resources>
    <string name="app_name">EasyRecyclerBinding</string>

    <string name="title_menu">Menu</string>
    <string name="button_title_recycler">RecyclerView</string>
    <string name="button_title_horizontal_recycler">Horizontal RV</string>
    <string name="button_title_vp">ViewPager</string>
    <string name="button_title_vp2">ViewPager2</string>
    <string name="button_title_vp2_paging">ViewPager2Paging</string>
    <string name="button_title_paging">Paging</string>
    <string name="button_title_tabs">BottomTabs</string>

    <string name="button_title_sing_in">Sing in</string>
    <string name="button_title_sing_up">Sing up</string>
    <string name="button_title_retry">Retry</string>

    <string name="button_clear">Clear</string>
    <string name="button_generate">Generate</string>
    <string name="button_add">Add</string>

    <string name="tab_title_first">FIRST PAGE</string>
    <string name="tab_title_second">SECOND PAGE</string>

    <string name="hint_enter_login">Enter login</string>
    <string name="hint_enter_password">Enter password</string>

    <string-array name="vp_titles">
        <item>@string/tab_title_first</item>
        <item>@string/tab_title_second</item>
    </string-array>
</resources>