<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="vm"
        type="com.rasalexman.erb.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_menu"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_title_recycler"
            android:onClick="@{() -> vm.onRvButtonClicked()}"
            />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_title_horizontal_recycler"
            android:onClick="@{() -> vm.onHorizontalButtonClicked()}"
            />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_title_vp"
            android:onClick="@{() -> vm.onVpButtonClicked()}"
            />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_title_vp2"
            android:onClick="@{() -> vm.onVp2ButtonClicked()}"
            />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/button_title_paging"
            android:onClick="@{() -> vm.onPagingButtonClicked()}"
            />

    </LinearLayout>
</layout>