<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.rasalexman.erb.ui.viewpager2example.pages.FirstPageViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/selector_text_input_stroke_color">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical|start"
                android:hint="@string/hint_enter_login"
                android:maxLines="1"
                android:text="@={vm.login}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/color_text_dark"
                android:textColorHint="@color/color_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/selector_text_input_stroke_color">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_vertical|start"
                android:hint="@string/hint_enter_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:text="@={vm.password}"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/color_text_dark"
                android:textColorHint="@color/color_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/button_title_sing_in"
            android:onClick="@{() -> vm.onSingInButtonClicked()}"
            />

    </LinearLayout>
</layout>